# RawImageViewer

./: .clang-format  CMakeLists.txt  README.md  TODO.md  main.cpp
cmake/: options.cmake
include/: ImageModel.hpp  ImageView.hpp  MainWidget.hpp
src/: ImageModel.cpp  ImageView.cpp  MainWidget.cpp
tests/: CMakeLists.txt  test_model.cpp
